[package]
name = "memory_game"
version = "0.1.0"
description = "FrontendMentor | MemoryGame challenge"
authors = ["Jessai <maya.jessai+@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
futures-signals = "0.3.20"
once_cell = "1.7.2"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"] }
wasm-bindgen-futures = "0.4.28"
serde_derive = "1.0.130"
futures = "0.3.17"
wasm-logger = "0.2.0"
getrandom = { version = "0.2.3", features =["js"] }
rand = "0.8.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
	"Window",
	"Document",
	"HtmlHeadElement",
	"Text",
	"Element",
    	"console",
	"Url",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
]
